--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -117,7 +117,9 @@
 
         <div class="form-group" ng-if="method == 'POST'">
             <h3>POST Body</h3>
-            <div json-editor model="postBody" options="options" style="height: 400px; padding-bottom:20px;" />
+<!--
+            <div json-editor model="postBody" options="options" style="height: 400px; padding-bottom:20px;" />-->
+            
             <div class="pull-left">
                 <button type="button" class="btn btn-default">Insert Junk</button>
                 <button type="button" class="btn btn-default">Randomize Requests</button>
