--- a/window/templates/result.html
+++ b/window/templates/result.html
@@ -17,7 +17,7 @@
                         </div>
                         <label class="col-md-2 control-label">Body:</label>
                         <div class="col-md-10">
-                            <textarea ng-model="body" rows="3" class="form-control" readonly/>
+                            <div ng-model="body" ng-readonly="true" ui-ace></div>
                         </div>
                     </div>
                 </fieldset>
@@ -26,5 +26,5 @@
     </div>
 </div>
 <div class="container">
-    <p>{{ response }}</p>
+    <div ng-model="response" ng-readonly="true" ui-ace></div>
 </div>
