--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -24,6 +24,10 @@
                 </tr>
             </tbody>
         </table>
-        <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+            </div>
+        </div>
     </section>
 </div>
