--- a/window/style/style.css
+++ b/window/style/style.css
@@ -10,6 +10,9 @@ textarea {
 th {
   background-color: #ececec; }
 
+input {
+  border: none; }
+
 .table {
   table-layout: fixed;
   margin-top: 0px;
@@ -33,10 +36,22 @@ th {
 .btn {
   border-radius: 20px; }
 
+.panel-body {
+  padding: 5px; }
+
+.panel {
+  border: 0px;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
 .rowExpanded {
   margin: 20px; }
 
 .ace_editor {
   height: 200px; }
+
+.underlined {
+  border-bottom: 2px solid black;
+  border-radius: 0px; }
 
 /*# sourceMappingURL=style.css.map */
