--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -86,7 +86,7 @@
                         <button type="button" class="btn btn-default" ng-click="randomizeValues(paramList)">Random Data</button>
                     </div>
                     <div class="pull-right">
-                        <button type="button" class="btn btn-primary" ng-click="addGET(urlInput, paramList, method, headerList)">Add to Batch</button>
+                        <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList)">Add to Batch</button>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
 
     <section ng-if="method == 'POST'">
         <h3>Request Body</h3>
-        <div ng-model="postBody" ui-ace></div>
+        <div ng-model="requestBody" ui-ace></div>
         <div class="panel panel-default">
             <div class="panel-body">
                 <div class="pull-left">
@@ -132,7 +132,7 @@
                     <button type="button" class="btn btn-default">Randomize Requests</button>
                 </div>
                 <div class="pull-right">
-                    <button type="button" class="btn btn-primary" ng-click="addPOST(urlInput, postBody, method, headerList)">Add to Batch</button>
+                    <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList, requestBody)">Add to Batch</button>
                 </div>
             </div>
         </div>
