--- a/window/style/scss-style.scss
+++ b/window/style/scss-style.scss
@@ -20,6 +20,10 @@ input {
   border: none;
 }
 
+textarea{
+  border: none;
+}
+
 .table {
 	table-layout:fixed;
   margin-top: 0px;
@@ -72,4 +76,14 @@ input {
 .underlined{
   border-bottom: 2px solid black;
   border-radius: 0px;
+  box-shadow: none;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
 }
+
