--- a/window/style/style.css
+++ b/window/style/style.css
@@ -13,6 +13,9 @@ th {
 input {
   border: none; }
 
+textarea {
+  border: none; }
+
 .table {
   table-layout: fixed;
   margin-top: 0px;
@@ -52,6 +55,15 @@ input {
 
 .underlined {
   border-bottom: 2px solid black;
-  border-radius: 0px; }
+  border-radius: 0px;
+  box-shadow: none;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff; }
 
 /*# sourceMappingURL=style.css.map */
