--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="col-md-11">
                     <label>URL:</label>
-                    <input type="text" class="form-control underlined" placeholder="URL to Fuzz" ng-model="urlInput" />
+                    <input type="text" class="underlined" placeholder="URL to Fuzz" ng-model="urlInput" />
                 </div>
             </div>
         </div>
@@ -34,9 +34,9 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="param in paramList track by $index">
-                        <td><input type="text" ng-model="param.key" class="form-control" /></td>
+                        <td><input type="text" ng-model="param.key" class="underlined" placeholder="Query Parameter"/></td>
                         <td>
-                            <textarea ng-model="param.value" rows="1" class="form-control" />
+                            <textarea ng-model="param.value" rows="1" class="underlined" placeholder="Value"/>
 
                             <div class="rowExpanded" ng-if="param.expanded">
                                 <form class="form-horizontal">
@@ -105,9 +105,9 @@
             </thead>
             <tbody>
                 <tr ng-repeat="header in headerList track by $index">
-                    <td><input type="text" class="form-control" ng-model="header.key" /></td>
+                    <td><input type="text" class="underlined" ng-model="header.key" placeholder="Key"/></td>
                     <td>
-                        <textarea rows="1" class="form-control" ng-model="header.value" />
+                        <textarea rows="1" class="underlined" ng-model="header.value" placeholder="Value"/>
                     </td>
                     <td>
                         <a ng-click="removeItem(headerList, $index)">Remove</a>
