Add beautification library

--- a/window/templates/result.html
+++ b/window/templates/result.html
@@ -26,5 +26,5 @@
     </div>
 </div>
 <div class="container">
-    <div ng-model="response" ng-readonly="true" ui-ace></div>
+    <div ng-model="response" ui-ace="{mode: 'xml', useWrapMode : true}" ng-readonly="true"></div>
 </div>
