--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -123,8 +123,21 @@
     </section>
 
     <section ng-if="method == 'POST'">
-        <h3>Request Body</h3>
-        <div ng-model="requestBody" ui-ace></div>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="pull-left">
+                    <h3>Request Body</h3>
+                </div>
+                <div class="pull-right">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <button type="button" class="btn btn-default" ng-click="setEditor('XML')">XML</button>
+                        <button type="button" class="btn btn-default" ng-click="setEditor('JSON')">JSON</button>
+                        <button type="button" class="btn btn-default" ng-click="setEditor('RAW')">RAW</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="bodyEditor" ng-model="requestBody" ui-ace="{onLoad: aceLoaded}"></div>
         <div class="panel panel-default">
             <div class="panel-body">
                 <div class="pull-left">
