Blueprint randomizeBody() for inserting fuzz into json/xml

--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -142,7 +142,7 @@
             <div class="panel-body">
                 <div class="pull-left">
                     <button type="button" class="btn btn-default">Insert Junk</button>
-                    <button type="button" class="btn btn-default">Randomize Requests</button>
+                    <button type="button" class="btn btn-default" ng-click="randomizeBody(requestBody)">Randomize Requests</button>
                 </div>
                 <div class="pull-right">
                     <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList, requestBody)">Add to Batch</button>
