--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -122,7 +122,7 @@
         </div>
     </section>
 
-    <section ng-if="method == 'POST'">
+    <section ng-if="method != 'GET'">
         <div class="panel panel-default">
             <div class="panel-body">
                 <div class="pull-left">
