--- a/window/style/style.css
+++ b/window/style/style.css
@@ -1,14 +1,14 @@
 html {
   overflow-y: scroll; }
 
-section {
-  padding-bottom: 50px; }
-
 textarea {
   resize: vertical; }
 
+table {
+  background-color: white; }
+
 th {
-  background-color: #ececec; }
+  background-color: #eaeaea; }
 
 input {
   border: none; }
@@ -16,10 +16,26 @@ input {
 textarea {
   border: none; }
 
+body {
+  background-color: #fbfbfb; }
+
 .table {
   table-layout: fixed;
   margin-top: 0px;
   margin-bottom: 0px; }
+
+.btn-toolbar {
+  padding: 5px; }
+
+.panel-default > .panel-heading {
+  color: white;
+  background-color: #2574A9; }
+
+.panel-body {
+  padding: 10px; }
+
+.panel-top {
+  margin-top: 20px; }
 
 .navbar {
   margin-bottom: 0px; }
@@ -30,7 +46,7 @@ textarea {
   text-overflow: ellipsis; }
 
 .container {
-  width: 80%; }
+  width: 100%; }
 
 .footer {
   padding: 100px;
@@ -42,10 +58,14 @@ textarea {
 .panel-body {
   padding: 5px; }
 
-.panel {
-  border: 0px;
-  -webkit-box-shadow: none;
-  box-shadow: none; }
+.navbar-inverse {
+  background-color: #22313F; }
+
+.navbar-inverse .navbar-brand {
+  color: white; }
+
+.navbar-inverse .navbar-nav > li > a {
+  color: white; }
 
 .rowExpanded {
   margin: 20px; }
@@ -65,5 +85,8 @@ textarea {
   line-height: 1.42857143;
   color: #555;
   background-color: #fff; }
+
+.tableToolbarBottom {
+  padding: 5px; }
 
 /*# sourceMappingURL=style.css.map */
