--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -1,32 +1,34 @@
 <!-- TODO: Add more details for request on button press to expand row-->
 <div class="container">
     <section>
-        <h3>Results</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th class="col-xs-1">Method</th>
-                    <th class="col-xs-5">Request URL</th>
-                    <th class="col-xs-2">Data</th>
-                    <th class="col-xs-1">Status</th>
-                    <th class="col-xs-2">Text</th>
-                    <th class="col-xs-1">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="request in requestList track by $index">
-                    <td>{{ request.method }}</td>
-                    <td>{{ request.url }}</td>
-                    <td><a ng-click="viewResult(request)">{{ request.data }}</a></td>
-                    <td>{{ request.status }}</td>
-                    <td>{{ request.text }}</td>
-                    <td><a>See more</a></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="panel panel-default">
+        <div class="panel panel-default panel-top">
+            <div class="panel-heading">Batch Results</div>
             <div class="panel-body">
-                <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="col-xs-1">Method</th>
+                            <th class="col-xs-5">Request URL</th>
+                            <th class="col-xs-2">Data</th>
+                            <th class="col-xs-1">Status</th>
+                            <th class="col-xs-2">Text</th>
+                            <th class="col-xs-1">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="request in requestList track by $index">
+                            <td>{{ request.method }}</td>
+                            <td>{{ request.url }}</td>
+                            <td><a ng-click="viewResult(request)">{{ request.data }}</a></td>
+                            <td>{{ request.status }}</td>
+                            <td>{{ request.text }}</td>
+                            <td><a>See more</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="btn-toolbar" role="toolbar">
+                    <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+                </div>
             </div>
         </div>
     </section>
