--- a/window/style/style.css
+++ b/window/style/style.css
@@ -74,7 +74,7 @@ body {
   height: 400px; }
 
 .underlined {
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #2574A9;
   border-radius: 0px;
   box-shadow: none;
   display: block;
@@ -84,7 +84,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #555;
-  background-color: #fff; }
+  background-color: white; }
 
 .tableToolbarBottom {
   padding: 5px; }
