--- a/window/style/style.css
+++ b/window/style/style.css
@@ -89,4 +89,9 @@ body {
 .tableToolbarBottom {
   padding: 5px; }
 
+.input-group-addon {
+  color: white;
+  background-color: #2574A9;
+  border: 0px; }
+
 /*# sourceMappingURL=style.css.map */
