Convert attack selector to directive

--- a/window/templates/history.html
+++ b/window/templates/history.html
@@ -1,5 +1,6 @@
 <!-- TODO: Add more details for request on button press to expand row-->
 <div class="container">
+    <!--<attack-selector field="attack"></attack-selector>-->
     <section>
         <div class="panel panel-default panel-top">
             <div class="panel-heading">History</div>
