--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -40,35 +40,8 @@
                             <td><input type="text" ng-model="param.key" class="underlined" placeholder="Query Parameter" /></td>
                             <td>
                                 <textarea ng-model="param.value" rows="1" class="underlined" placeholder="Value" />
-
                                 <div class="rowExpanded" ng-if="param.expanded">
-                                    <form class="form-horizontal">
-                                        <fieldset>
-                                            <div class="form-group">
-                                                <label class="col-md-4 control-label">SQL Injection</label>
-                                                <div class="col-md-4">
-                                                    <select class="form-control" ng-model="sqlText">
-                                                    <option ng-repeat="injectText in sqlInjectionOptions" value="{{injectText}}">
-                                                        {{injectText}}   
-                                                    </option>
-                                                </select>
-                                                </div>
-                                                <button type="button" class="btn btn-default" ng-click="insertAttack($index, sqlText)">Add</button>
-                                            </div>
-
-                                            <div class="form-group">
-                                                <label class="col-md-4 control-label">XSS</label>
-                                                <div class="col-md-4">
-                                                    <select class="form-control" ng-model="xssText">
-                                                    <option ng-repeat="injectText in xssOptions" value="{{injectText}}">
-                                                        {{injectText}}   
-                                                    </option>
-                                                </select>
-                                                </div>
-                                                <button type="button" class="btn btn-default" ng-click="insertAttack($index, xssText)">Add</button>
-                                            </div>
-                                        </fieldset>
-                                    </form>
+                                    <attack-selector field="param.value"></attack-selector>
                                     <a ng-click="param.expanded = false">Hide</a>
                                 </div>
                             </td>
@@ -131,9 +104,14 @@
             <div class="panel-heading">Body</div>
             <div class="panel-body">
                 <div class="btn-toolbar" role="toolbar">
-                    <button type="button" class="btn btn-default" ng-click="setEditor('RAW')">RAW</button>
-                    <button type="button" class="btn btn-default" ng-click="setEditor('XML')">XML</button>
-                    <button type="button" class="btn btn-default" ng-click="setEditor('JSON')">JSON</button>
+                    <div class="pull-left">
+                        <button type="button" class="btn btn-default" ng-click="setEditor('RAW')">RAW</button>
+                        <button type="button" class="btn btn-default" ng-click="setEditor('XML')">XML</button>
+                        <button type="button" class="btn btn-default" ng-click="setEditor('JSON')">JSON</button>
+                    </div>
+                    <div class="pull-right">
+                        <button type="button" class="btn btn-primary">Import</button>
+                    </div>
                 </div>
                 <div id="bodyEditor" ng-model="requestBody" ui-ace="{onLoad: aceLoaded}"></div>
                 <div class="btn-toolbar" role="toolbar">
