Implement Search Help for Attacks using Modal

--- a/window/style/scss-style.scss
+++ b/window/style/scss-style.scss
@@ -95,6 +95,11 @@ body{
     color: white;
 }
 
+.modal-dialog {
+    width: 1000px;
+    margin: 30px auto;
+}
+
 .rowExpanded {
   margin: 20px;
 }
