--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -46,7 +46,8 @@
                                 </div>
                             </td>
                             <td>
-                                <a ng-click="param.expanded = true">Insert Data</a>
+                                <!--<a ng-click="param.expanded = true" >Insert Data</a>-->
+                                <a ng-click="showAModal(this)" >Insert Attack</a>
                             </td>
                             <td>
                                 <a ng-click="removeItem(paramList, $index)">Remove</a>
