Fix retry batch error

--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -27,7 +27,7 @@
                     </tbody>
                 </table>
                 <div class="btn-toolbar" role="toolbar">
-                    <button type="button" class="btn btn-default" ng-click="retryBatch()">Retry Batch</button>
+                    <button type="button" class="btn btn-default" ng-click="retryBatch(requestList)">Retry Batch</button>
                 </div>
             </div>
         </div>
