--- a/window/templates/attackModal.html
+++ b/window/templates/attackModal.html
@@ -19,7 +19,7 @@
                 <tr>
                     <th class="col-xs-3">Name</th>
                     <th class="col-xs-8">Insert</th>
-                    <th class="col-xs-1">action</th>
+                    <th class="col-xs-1">Action</th>
                 </tr>
             </thead>
             <tbody>
