Clean up add params function

--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -88,7 +88,7 @@
                 </table>
                 <div class="btn-toolbar" role="toolbar">
                     <div class="pull-left">
-                        <button type="button" class="btn btn-default" ng-click="getParamsFromUrl(urlInput)">Get Params</button>
+                        <button type="button" class="btn btn-default" ng-click="getParamsFromUrl(urlInput, paramList)">Get Params</button>
                         <button type="button" class="btn btn-default" ng-click="addParameter(paramList)">Add Parameter</button>
                         <button type="button" class="btn btn-default" ng-click="randomizeValues(paramList)">Random Data</button>
                     </div>
