Repeat request if status code == 1 (chrome dos)

--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -118,7 +118,7 @@
                 <div class="btn-toolbar" role="toolbar">
                     <div class="pull-left">
                         <button type="button" class="btn btn-default">Insert Junk</button>
-                        <button type="button" class="btn btn-default" ng-click="randomizeBody(requestBody)">Randomize Requests</button>
+                        <button type="button" class="btn btn-default" ng-click="randomizeBody()">Randomize Requests</button>
                     </div>
                     <div class="pull-right">
                         <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList, requestBody)">Add to Batch</button>
