--- a/window/templates/requests.html
+++ b/window/templates/requests.html
@@ -28,6 +28,7 @@
                 </table>
                 <div class="btn-toolbar" role="toolbar">
                     <button type="button" class="btn btn-default" ng-click="retryBatch(requestList)">Retry Batch</button>
+                    <button type="button" class="btn btn-danger" ng-click="stop()">STOP</button>
                 </div>
             </div>
         </div>
