--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <section>
+      <section>
         <div class="panel panel-default panel-top">
             <div class="panel-heading">URL</div>
             <div class="panel-body">
@@ -14,8 +14,7 @@
                     </div>
                     <div class="col-md-11">
                         <label>URL:</label>
-                        <input type="text" class="underlined" placeholder="URL to Fuzz" ng-model="urlInput" ng-change="getParamsFromUrl(urlInput)"
-                        />
+                        <input type="text" class="underlined" placeholder="URL to Fuzz" ng-model="urlInput" ng-change="getParamsFromUrl(urlInput)"/>
                     </div>
                 </div>
             </div>
@@ -36,7 +35,15 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="header in headerList track by $index">
-                            <td><input type="text" class="underlined" ng-model="header.key" placeholder="Key" /></td>
+                            <td>
+                                <input type="text" class="underlined" ng-model="header.key" placeholder="Key" ng-keyup="onHeaderSelected(this)"/>
+                                <!-- What to do about vis?-->
+                                
+                                <ul class="list-group" ng-if="header.vis">
+                                    <li class="list-group-item"
+                                    ng-repeat="headerText in header.filterHeaders" ng-click="fillHeader(headerText,header)">{{ headerText }}</li>
+                                </ul>
+                            </td>
                             <td>
                                 <textarea rows="1" class="underlined" ng-model="header.value" placeholder="Value" />
                             </td>
@@ -71,6 +78,7 @@
                             <td><input type="text" ng-model="param.key" class="underlined" placeholder="Query Parameter" /></td>
                             <td>
                                 <textarea ng-model="param.value" rows="1" class="underlined" placeholder="Value" />
+                                <!-- Can probably remove expanded now that using modal -->
                                 <div class="rowExpanded" ng-if="param.expanded">
                                     <attack-selector field="param.value"></attack-selector>
                                     <a ng-click="param.expanded = false">Hide</a>
