--- a/window/templates/main.html
+++ b/window/templates/main.html
@@ -125,8 +125,7 @@
                 <div id="bodyEditor" ng-model="requestBody" ui-ace="{onLoad: aceLoaded}"></div>
                 <div class="btn-toolbar" role="toolbar">
                     <div class="pull-left">
-                        <button type="button" class="btn btn-default">Insert Junk</button>
-                        <button type="button" class="btn btn-default" ng-click="randomizeBody()">Randomize Requests</button>
+                        <button type="button" class="btn btn-default" ng-click="randomizeBody()">Randomize Data</button>
                     </div>
                     <div class="pull-right">
                         <button type="button" class="btn btn-primary" ng-click="addRequest(urlInput, paramList, method, headerList, requestBody)">Add to Batch</button>
